# bijective-enum-map

./: Cargo.toml  README.md
src/: bijective.rs  helpers.rs  injective.rs  lib.rs
