[package]
name = "bijective-enum-map"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
authors = ["Finley Huggins"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/robofinch/bijective-enum-map"
description = "Convert an enum to and from another type, with From (or TryFrom)"
keywords = ["enum", "map", "from", "try_from", "conversion"]
categories = ["rust-patterns", "encoding", "no-std", "no-std::no-alloc"]

[dependencies]

[features]
use_type_as = []
